--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@ Design|Probability and Statistics|Calculus|Oracle and Web Dev Course (in progres
 <strong>Interactive websites</strong> (team and individual)
 
 							</p>
-							<a href="#" class="card-link">Card link</a>
-							<a href="#" class="card-link">Another link</a>
+							<a href="#" class="card-link">HOME</a>
+							<a href="#" class="card-link">GO TO TOP</a>
 						</div>
 					</div>
 				</div>
@@ -244,8 +244,8 @@ Design|Probability and Statistics|Calculus|Oracle and Web Dev Course (in progres
 							<p class="card-text">
 							Developer Tools: Git, VS Code, Visual Studio, Atom
 							</p>
-							<a href="#" class="card-link">Card link</a>
-							<a href="#" class="card-link">Another link</a>
+							<a href="#" class="card-link">HOME</a>
+							<a href="#" class="card-link">GO TO TOP</a>
 						</div>
 					</div>
 				</div>
@@ -258,8 +258,8 @@ Design|Probability and Statistics|Calculus|Oracle and Web Dev Course (in progres
 						  Python, C/C++/C#, JavaScript,
 							 HTML,CSS,Bootstrap, Java,SQL
 							</p>
-							<a href="#" class="card-link">Card link</a>
-							<a href="#" class="card-link">Another link</a>
+							<a href="#" class="card-link">HOME</a>
+							<a href="#" class="card-link">GO TO TOP</a>
 						</div>
 					</div>
 				</div>
