--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ Design|Probability and Statistics|Calculus|Oracle and Web Dev Course (in progres
 						aria-labelledby="panelsStayOpen-headingThree"
 					>
 						<div class="accordion-body">
-		<strong>	Coding club IECSE, ISTE, IE -MECHATRONIX 	</strong>December 2021 – December 2022
+		<strong> Vocational Training at Coal India Limited,Internship at Reliancne Jio infocomm Limited,Coding club IECSE, ISTE, IE -MECHATRONIX 	</strong>December 2021 – December 2022
 			<strong>MOSS MANIPAL, GDSC 	</strong>2021-tilldate (managing committee)
 		Part of the organizing team of a webinar on coding contests with more than 500 participants
 		code club 2022
