--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<div class="row justify-content-between">
 					<div class="col-md-6 hero-left">
 						<h1>Hi!! I am <span>Tashmit</span></h1>
-						<h2>Sophomore at <span>MIT Manipal </span> pursuing <span>CCE </span>course</h2>
+						<h2>Student at <span>MIT Manipal </span> pursuing <span>CCE </span>course</h2>
 						<p>⚡ Tangent : I love to Play,Code,Brainstorm and I am interested in photography.</p>
 						<button type="button" class="btn btn-success btn-md"
 						<a href="https://github.com/TASHMITVERMA" class="navbar-links">Contact</a>>
